# VectorDBPythonClient

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: customvectorstore_example.py  vectordb_langchain_embed_example.py
examples/advanced/: customvectorstore_example.py  vectordb_langchain_embed_example.py
examples/beginner/: async_client_test.py  create_collection.py
vectordb_client/: __init__.py  async_client.py  client.py  exceptions.py  models.py  vectorstore.py
